--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                 
                 <div class="max-w-3xl mx-auto">
                     <p class="text-xl text-gray-300 mb-12">
-                        AI is a complex new technology space, and the best and brightest want to learn and understand. 
-                        This is a space for builders of tech and businesses to learn, tinker, and share.
+                        AI is a complex new technology space that you, the best and brightest, want to learn and understand. 
+                        This is a space for builders of AI apps, tech, and businesses to learn, tinker, and share.
                     </p>
                 </div>
 
@@ -83,7 +83,7 @@
                     <div class="glass-card p-8 rounded-xl shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-1">
                         <h2 class="text-2xl font-semibold mb-4 text-indigo-300">For Engineers</h2>
                         <p class="text-gray-300">
-                            Building production AI applications or technologies? Join a community of practitioners 
+                            Building production AI applications or technologies? Join a community
                             sharing real-world experiences and solutions.
                         </p>
                     </div>
@@ -91,8 +91,8 @@
                     <div class="glass-card p-8 rounded-xl shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-1">
                         <h2 class="text-2xl font-semibold mb-4 text-indigo-300">For Leaders</h2>
                         <p class="text-gray-300">
-                            Founders, CTOs, and leaders building technical teams and AI businesses will find 
-                            resources and connections to drive success.
+                            Founders, CTOs, and leaders building technical teams and AI businesses? You will find 
+                            resources and connections to solve hard problems.
                         </p>
                     </div>
                 </div>
