--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="text-center">
                 <h1 class="text-4xl sm:text-6xl font-bold mb-6">
                     <span class="gradient-text">Learn, Tinker, Share</span>
-                    <span class="block text-gray-100 mt-2">for AI Engineering</span>
+                    <span class="block text-gray-100 mt-2"><i>Where AI builders come to learn, tinker, and share</i></span>
                 </h1>
 
                 <p><center><img width="300px" src="images/LTS.webp" /></center></p><br/>
