--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn, Tinker, Share - AI Engineering Community</title>
+    <link rel="icon" type="image/png" href="images/lts-icon-192.png">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
     <style>
         .gradient-text {
-            background: linear-gradient(120deg, #818CF8, #C7D2FE);
+            // background: linear-gradient(120deg, #818CF8, #C7D2FE);
+            // background: linear-gradient(120deg, #2a6930, #51b865);
+            background: linear-gradient(120deg, #339966, #33CC66);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
