--- a/index.html
+++ b/index.html
@@ -55,12 +55,13 @@
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="flex justify-between h-16 items-center">
                     <div class="flex-shrink-0">
+                        <img src="images/lts-icon-192.png" width="192px" />
                         <span class="text-2xl font-bold gradient-text">LTS</span>
                     </div>
                     <div class="flex space-x-8">
-                        <a href="#" class="text-gray-300 hover:text-indigo-400">Learn</a>
-                        <a href="#" class="text-gray-300 hover:text-indigo-400">Tinker</a>
-                        <a href="#" class="text-gray-300 hover:text-indigo-400">Share</a>
+                        <a href="#" class="text-gray-300 hover:text-green-400">Learn</a>
+                        <a href="#" class="text-gray-300 hover:text-green-400">Tinker</a>
+                        <a href="#" class="text-gray-300 hover:text-green-400">Share</a>
                     </div>
                 </div>
             </div>
@@ -70,8 +71,10 @@
             <div class="text-center">
                 <h1 class="text-4xl sm:text-6xl font-bold mb-6">
                     <span class="gradient-text">Learn, Tinker, Share</span>
-                    <span class="block text-gray-100 mt-2"><i>Where AI builders come to learn, tinker, and share</i></span>
                 </h1>
+                <h2 class="text-4lg sm:text-6lg font-bold mb-6">
+                    <span class="block text-gray-100 mt-2"><i>Where AI builders come to learn, tinker, and share</i></span>
+                </h2>
 
                 <p><center><img width="300px" src="images/LTS.webp" /></center></p><br/>
                 
@@ -84,7 +87,7 @@
 
                 <div class="grid md:grid-cols-2 gap-8 max-w-4xl mx-auto">
                     <div class="glass-card p-8 rounded-xl shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-1">
-                        <h2 class="text-2xl font-semibold mb-4 text-indigo-300">For Engineers</h2>
+                        <h2 class="text-2xl font-semibold mb-4 text-green-300">For Engineers</h2>
                         <p class="text-gray-300">
                             Building production AI applications or technologies? Join a community
                             sharing real-world experiences and solutions.
@@ -92,7 +95,7 @@
                     </div>
 
                     <div class="glass-card p-8 rounded-xl shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-1">
-                        <h2 class="text-2xl font-semibold mb-4 text-indigo-300">For Leaders</h2>
+                        <h2 class="text-2xl font-semibold mb-4 text-green-300">For Leaders</h2>
                         <p class="text-gray-300">
                             Founders, CTOs, and leaders building technical teams and AI businesses? You will find 
                             resources and connections to solve hard problems.
@@ -101,7 +104,7 @@
                 </div>
 
                 <div class="mt-12">
-                    <button class="bg-indigo-600 text-white px-8 py-3 rounded-lg text-lg font-semibold hover:bg-indigo-700 transition-colors shadow-lg hover:shadow-xl">
+                    <button class="bg-green-600 text-white px-8 py-3 rounded-lg text-lg font-semibold hover:bg-green-700 transition-colors shadow-lg hover:shadow-xl">
                         Join the Community
                     </button>
                 </div>
@@ -112,10 +115,10 @@
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
                 <div class="text-center text-gray-400">
                     <div class="flex justify-center space-x-6 mb-4">
-                        <a href="#" class="hover:text-indigo-400">About</a>
-                        <a href="#" class="hover:text-indigo-400">Contact</a>
-                        <a href="#" class="hover:text-indigo-400">Terms</a>
-                        <a href="#" class="hover:text-indigo-400">Privacy</a>
+                        <a href="#" class="hover:text-green-400">About</a>
+                        <a href="#" class="hover:text-green-400">Contact</a>
+                        <a href="#" class="hover:text-green-400">Terms</a>
+                        <a href="#" class="hover:text-green-400">Privacy</a>
                     </div>
                     <p>© 2024 Learn, Tinker, Share. All rights reserved.</p>
                 </div>
