--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="flex justify-between h-16 items-center">
                     <div class="flex-shrink-0">
-                        <img src="images/lts-icon-192.png" width="192px" />
                         <span class="text-2xl font-bold gradient-text">LTS</span>
                     </div>
                     <div class="flex space-x-8">
@@ -70,7 +69,10 @@
         <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16">
             <div class="text-center">
                 <h1 class="text-4xl sm:text-6xl font-bold mb-6">
-                    <span class="gradient-text">Learn, Tinker, Share</span>
+                    <span class="gradient-text">
+                        <img src="images/lts-icon-192.png" width="24px" />
+                        Learn, Tinker, Share
+                    </span>
                 </h1>
                 <h2 class="text-4lg sm:text-6lg font-bold mb-6">
                     <span class="block text-gray-100 mt-2"><i>Where AI builders come to learn, tinker, and share</i></span>
