--- a/index.html
+++ b/index.html
@@ -106,8 +106,13 @@
                 </div>
 
                 <div class="mt-12">
+                    <a href="https://medium.com/learn-tinker-share">
+                        <button class="bg-green-600 text-white px-8 py-3 rounded-lg text-lg font-semibold hover:bg-green-700 transition-colors shadow-lg hover:shadow-xl">
+                            Blog
+                        </button>
+                    </a>
                     <button class="bg-green-600 text-white px-8 py-3 rounded-lg text-lg font-semibold hover:bg-green-700 transition-colors shadow-lg hover:shadow-xl">
-                        Join the Community
+                        Chat
                     </button>
                 </div>
             </div>
