--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16">
             <div class="text-center">
                 <h1 class="text-4xl sm:text-6xl font-bold mb-6">
-                    <img src="images/lts-icon-192.png" width="48px" />
+                    <img src="images/lts-icon-192.png" width="48px" class="float: left" />
                     <span class="gradient-text">
                         Learn, Tinker, Share
                     </span>
