--- a/index.html
+++ b/index.html
@@ -68,11 +68,13 @@
 
         <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16">
             <div class="text-center">
-                <h1 class="text-4xl sm:text-6xl font-bold mb-6">
+              <h1 class="text-4xl sm:text-6xl font-bold mb-6">
+                <div class="float: left">
                     <img src="images/lts-icon-192.png" width="48px" class="float: left" />
                     <span class="gradient-text">
                         Learn, Tinker, Share
                     </span>
+                    </div>
                 </h1>
                 <h2 class="text-4lg sm:text-6lg font-bold mb-6">
                     <span class="block text-gray-100 mt-2"><i>Where AI builders come to learn, tinker, and share</i></span>
