--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
 
         <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16">
             <div class="text-center">
-              <h1 class="text-4xl sm:text-6xl font-bold mb-6">
-                <div class="float: left">
-                    <img src="images/lts-icon-192.png" width="48px" class="float: left" />
-                    <span class="gradient-text">
-                        Learn, Tinker, Share
-                    </span>
+                <h1 class="text-4xl sm:text-6xl font-bold mb-6">
+                    <div style="display: flex; align-items: center; justify-content: center">
+                        <img src="images/lts-icon-192.png" width="76px" style="float: left" />
+                        <span class="gradient-text">
+                            Learn, Tinker, Share
+                        </span>
                     </div>
                 </h1>
                 <h2 class="text-4lg sm:text-6lg font-bold mb-6">
@@ -113,9 +113,12 @@
                             Blog
                         </button>
                     </a>
-                    <button class="bg-green-600 text-white px-8 py-3 rounded-lg text-lg font-semibold hover:bg-green-700 transition-colors shadow-lg hover:shadow-xl">
-                        Chat
-                    </button>
+
+                    <a href="#">
+                        <button class="bg-green-600 text-white px-8 py-3 rounded-lg text-lg font-semibold hover:bg-green-700 transition-colors shadow-lg hover:shadow-xl">
+                            Chat
+                        </button>
+                    </a>
                 </div>
             </div>
         </main>
