--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn, Tinker, Share - AI Engineering Community</title>
-    <link rel="icon" type="image/png" href="images/lts-icon-192.png">
+    <link rel="icon" type="image/png" href="images/lts-icon-filled-192.png">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
     <style>
@@ -70,7 +70,7 @@
             <div class="text-center">
                 <h1 class="text-3xl sm:text-4xl font-bold mb-6">
                     <div style="display: flex; align-items: center; justify-content: center">
-                        <img src="images/lts-icon-192.png" width="76px" style="float: left" />
+                        <img src="images/lts-icon-filled-192.png" width="76px" style="float: left" />
                         <span class="gradient-text">
                             Learn, Tinker, Share
                         </span>
